feat: add integrations and unit tests.